
[tool.poetry]
name = "food-app"
authors = ["Aparna <csaparna88@gmail.com>"]

description = "package description"
version = "0.0.1"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.30.3"
streamlit = "^1.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-vv --cov=coach_iris --cov-report term --cov-report html"
testpaths = [
    "tests",
] 
